--- a/english_home.html
+++ b/english_home.html
@@ -322,11 +322,11 @@
          <div class="courses-area section-padding40 fix">
 
 
-            <div class="container">
+             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
+                              <h2>ENGLISH</h2>
                                <h2>SYSTEMS</h2>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -371,7 +371,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC SYSTEMS</p>
+                                    <p>ENGLISH SYSTEMS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -404,7 +404,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -440,7 +440,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -472,7 +472,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC SYSTEMS</p>
+                                    <p>ENGLISH SYSTEMS</p>
                                     <h3>KGPRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -505,7 +505,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -541,7 +541,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -573,7 +573,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC SYSTEMS</p>
+                                    <p>ENGLISH SYSTEMS</p>
                                     <h3>KGPRIPRESS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -606,7 +606,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -642,7 +642,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -674,7 +674,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC SYSTEMS</p>
+                                    <p>ENGLISH SYSTEMS</p>
                                     <h3>AIS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -707,7 +707,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ENGLISH SYSTEMS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
