--- a/exams.html
+++ b/exams.html
@@ -2067,6 +2067,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                             <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
