--- a/arabic_home.html
+++ b/arabic_home.html
@@ -1201,7 +1201,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1234,7 +1234,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1266,7 +1266,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1299,7 +1299,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1332,7 +1332,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1365,7 +1365,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1397,7 +1397,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1430,7 +1430,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1462,7 +1462,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1495,7 +1495,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1527,7 +1527,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1560,7 +1560,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1592,7 +1592,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2079,7 +2079,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2112,7 +2112,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2144,7 +2144,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2177,7 +2177,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2210,7 +2210,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2243,7 +2243,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2275,7 +2275,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2308,7 +2308,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2340,7 +2340,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2373,7 +2373,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2405,7 +2405,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2438,7 +2438,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -2470,7 +2470,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
